// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`import gleam style 1`] = `
[
  {
    "end": 19,
    "imports": ImportTree {
      "segments": [
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "my",
        },
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "foo",
        },
      ],
    },
    "kind": "treeImport",
    "start": 5,
  },
]
`;

exports[`simple fn export 1`] = `
[
  {
    "end": 12,
    "kind": "export",
    "ref": {
      "calls": [],
      "end": 55,
      "kind": "fn",
      "name": "one",
      "nameElem": {
        "end": 22,
        "kind": "fnName",
        "name": "one",
        "start": 19,
      },
      "start": 16,
      "typeRefs": [
        {
          "end": 31,
          "kind": "typeRef",
          "name": "i32",
          "start": 28,
        },
      ],
    },
    "start": 5,
  },
]
`;

exports[`simple fn import 1`] = `
[
  {
    "end": 20,
    "imports": ImportTree {
      "segments": [
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "bar",
        },
        SimpleSegment {
          "args": undefined,
          "as": undefined,
          "name": "foo",
        },
      ],
    },
    "kind": "treeImport",
    "start": 5,
  },
]
`;
